clusters/build-clusters/common_except_app.ci/azure_namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: azure
---
apiVersion: v1
kind: Namespace
metadata:
  name: azure-private
