clusters/build-clusters/common_except_app.ci/openshift-virt-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-cnv
  labels:
    openshift.io/cluster-monitoring: "true"
