clusters/build-clusters/common_except_app.ci/loki.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loki
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: loki-promtail
  namespace: loki
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: log-collector
      app.kubernetes.io/instance: loki-promtail
      app.kubernetes.io/name: promtail
      app.kubernetes.io/part-of: loki
  template:
    metadata:
      labels:
        app.kubernetes.io/component: log-collector
        app.kubernetes.io/instance: loki-promtail
        app.kubernetes.io/name: promtail
        app.kubernetes.io/part-of: loki
        app.kubernetes.io/version: "2.2.1"
      annotations:
        promtail.yaml: |-
          [...]
    spec:
      containers:
      - args:
        - --oidc.client-id=$(CLIENT_ID)
        - --oidc.client-secret=$(CLIENT_SECRET)
        - --oidc.issuer-url=https://sso.redhat.com/auth/realms/redhat-external
        - --margin=10m
        - --file=/tmp/shared/prod_bearer_token
        name: prod-bearer-token
        volumeMounts:
        - mountPath: "/tmp/shared"
          name: shared-data
        image: quay.io/observatorium/token-refresher
      - command:
        - sh
        - -c
        - |
          promtail \
            -client.external-labels=host=$(HOSTNAME),cluster_name=$(CLUSTER_NAME) \
            -config.file=/etc/promtail/promtail.yaml
        image: quay.io/openshift-logging/promtail:v2.2.1
        imagePullPolicy: IfNotPresent
        name: promtail
        ports:
        - containerPort: 3101
          name: http-metrics
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: "/ready"
            port: http-metrics
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        securityContext:
          privileged: true
          readOnlyRootFilesystem: true
          runAsGroup: 0
          runAsUser: 0
        volumeMounts:
        - mountPath: "/etc/promtail"
          name: config
        - mountPath: "/run/promtail"
          name: run
        - mountPath: "/var/lib/docker/containers"
          name: docker
          readOnly: true
        - mountPath: "/var/log/pods"
          name: pods
          readOnly: true
        - mountPath: "/tmp/shared"
          name: shared-data
        - mountPath: "/var/log/journal"
          name: journal
          readOnly: true
      serviceAccountName: loki-promtail
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      volumes:
      - name: config
        downwardAPI:
          items:
          - path: promtail.yaml
            fieldRef:
              fieldPath: metadata.annotations['promtail.yaml']
      - hostPath:
          path: "/run/promtail"
        name: run
      - hostPath:
          path: "/var/lib/docker/containers"
        name: docker
      - hostPath:
          path: "/var/log/pods"
        name: pods
      - hostPath:
          path: "/var/log/journal"
        name: journal
      - emptyDir: {}
        name: shared-data
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 33%
---
kind: Service
apiVersion: v1
metadata:
  name: promtail
  namespace: loki
  labels:
    app.kubernetes.io/name: promtail
spec:
  ports:
    - name: metrics
      protocol: TCP
      port: 3101
      targetPort: http-metrics
  selector:
    app.kubernetes.io/name: promtail
  type: ClusterIP
